--- a/99_reference/handson-ml2-master/04_training_linear_models.ipynb
+++ b/99_reference/handson-ml2-master/04_training_linear_models.ipynb
@@ -1078,14 +1078,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Regularized Linear Models"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Ridge Regression"
    ]
@@ -2780,7 +2784,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2794,7 +2798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.12"
   },
   "nav_menu": {},
   "toc": {
